# bio_ai_agent_genslm_example

./: .gitignore  README.md  setup_cepi_example.sh
example/: generate.py  generate_util.py  pyproject.toml  pyproject.toml~
example/cepi_example/: agentic.py  agentic.py~  compute_similarity.py  endpoints.json  generate.py
example/cepi_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
example/cepi_example/output/: generated.fasta
example/input/: dna.fasta
example/output/: generated.fasta
